<resources>
    <string name="app_name">DentistSmile</string>

    <string name="title_home">Home</string>
    <string name="title_live">Live Dentist</string>
    <string name="title_account">Account</string>
    <string name="name" translatable="false">name</string>
    <string name="email" translatable="false">email</string>
    <string name="token" translatable="false">token</string>
    <string name="id" translatable="false">id</string>
    <string name="profile_name" translatable="false">profile_name</string>
    <string name="child_name" translatable="false">child_name</string>
    <string name="pendidikan" translatable="false">pendidikan</string>
    <string name="tempat_lahir" translatable="false">tempat_lahir</string>
    <string name="tanggal_lahir" translatable="false">tanggal_lahir</string>
    <string name="alamat" translatable="false">alamat</string>
    <string name="title_profile" translatable="false">Profile</string>

    <string name="title_dentist_assistant">Dentist Assistant</string>
    <string name="medical_checkup" translatable="false">Medical Checkup</string>
    <string name="article" translatable="false">Article</string>
    <string name="maps" translatable="false">Maps</string>
    <string name="doctor" translatable="false">Doctor</string>
<<<<<<< HEAD
    <string name="appointment" translatable="false">Appointment</string>
    <string name="reminder" translatable="false">Appointment</string>
=======
    <string name="reminder" translatable="false">Reminder</string>
>>>>>>> parent of a9b52ed (Merge branch 'main' of https://github.com/fahrurozi/DentistSmile)
    <string name="review" translatable="false">Review</string>

    <string name="article_detail" translatable="false">Article Detail</string>
    <string name="title_null" translatable="false">null</string>
    <string name="title_lorem_ipsum" translatable="false">Lorem Ipsum</string>
    <string name="title_name" translatable="false">Lorem Ipsum</string>
    <string name="anak" translatable="false">Anak</string>
    <string name="history_pemeriksaan" translatable="false">History Pemeriksaan</string>
    <string name="pemeriksaan_fisik" translatable="false">Pemeriksaan Fisik</string>
    <string name="pemeriksaan_gigi" translatable="false">Pemeriksaan Gigi</string>
    <string name="pemeriksaan_mata" translatable="false">Pemeriksaan Mata</string>
    <string name="pemeriksaan_telinga" translatable="false">Pemeriksaan Telinga</string>
    <string name="upload_dmft" translatable="false">Upload DMFT</string>

    <!--    pemeriksaan Fisik-->
    <string name="tinggi_badan" translatable="false">Tinggi Badan (cm)</string>
    <string name="berat_badan" translatable="false">Berat Badan (kg)</string>
    <string name="imt" translatable="false">imt</string>
    <string name="sistole" translatable="false">Sistole (mmHG)</string>
    <string name="diastole" translatable="false">diastole (mmHG)</string>

    <string name="masukkan_tinggi_badan" translatable="false">Masukkan Tinggi Badan</string>
    <string name="masukkan_berat_badan" translatable="false">Masukkan Berat Badan</string>
    <string name="harap_isi_tinggi_dan_berat_badan" translatable="false">Harap Isi Tinggi Badan dan Berat Badan</string>
    <string name="kosongkan_bila_tidak_tahu" translatable="false">Kosongkan Bila Tidak Mengetahui</string>

    <!--    pemeriksaan mata-->
    <string name="meta_perih_merah_dan_bengkak" translatable="false">Mata perih/merah dan bengkak</string>
    <string name="tidak_dapat_melihat_membaca_dengan_jelas" translatable="false">Tidak dapat melihat / membaca dengan jelas</string>
    <string name="menggunakan_kacamata" translatable="false">Menggunakan kacamata</string>
    <string name="mata_juling" translatable="false">Mata juling</string>
    <string name="tidak_dapat_membedakan_warna_dengan_baik" translatable="false">Tidak dapat membedakan warna dengan baik</string>
    <string name="bagaimana_kondisi_kesehatan_mata_anak" translatable="false">Bagaimana kondisi kesehatan mata anak</string>
    <string name="lama_menonton_gadget" translatable="false">Berapa lama waktu menonton TV + melihat gadget seperti HP/tablet + melihat layar komputer dalam 1 hari (Jam)</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="normal">Normal</string>
    <string name="minus">Minus</string>
    <string name="buta_warna">Buta Warna</string>

    <!--    pemeriksaan telinga-->
    <string name="tidak_merespon_bila_ada_suara_keras">Tidak merespon bila ada suara keras</string>
    <string name="tidak_mendengar_bila_dipanggil">Tidak mendengar bila dipanggil</string>
    <string name="tidak_mendengar_dengan_jelas">Tidak mendengar dengan jelas</string>
    <string name="keluar_cairan_dari_telinga">Keluar cairan dari telinga</string>
    <string name="telinga_terasa_tertutup_atau_tersumbat">Telinga terasa tertutup atau tersumbat</string>
    <string name="nyeri_telinga">Nyeri Telinga</string>
    <string name="terdapat_serumen_pada_bagian_telinga_kanan_anak">Terdapat serumen pada bagian telinga kanan anak</string>
    <string name="terdapat_serumen_pada_bagian_telinga_kiri_anak">Terdapat serumen pada bagian telinga kiri anak</string>
    <string name="volume_saat_menonton_tv_atau_mendengar_radio">Volume saat menonton TV atau mendengar radio</string>
    <string name="jawab_pertanyaan_terkait_kebiasaan_volume_menonton_tv_dan_saat_dipanggil_orangtua">Jawab pertanyaan terkait kebiasaan volume menonton TV dan saat dipanggil orangtua</string>
    <string name="kecil">Kecil</string>
    <string name="sedang">Sedang</string>
    <string name="besar">Besar</string>


    <!--    pemeriksaan gigi -->
    <string name="foto_gigi_depan">Foto gigi dari sisi depan</string>
    <string name="foto_gigi_kanan">Foto gigi dari sisi kanan</string>
    <string name="foto_gigi_kiri">Foto gigi dari sisi kiri</string>
    <string name="foto_gigi_atas">Foto gigi dari sisi atas</string>
    <string name="foto_gigi_bawah">Foto gigi dari sisi bawah</string>
    <string name="frekuensi_menyikat_gigi">Frekuensi menyikat gigi</string>
    <string name="kunjungan_ke_dokter_gigi">Kunjungan ke dokter gigi</string>

    <string name="btn_my_profile">My Profile</string>

    <string-array name="model">
        <item>yolocustom</item>
        <item>yolov5s</item>
        <item>yolov5n </item>
        <item>yolov5m</item>
        <item>yolov5s-int8</item>

    </string-array>

    <string name="dropdown_jenis_kelamin" translatable="false">Jenis Kelamin</string>
    <string-array name="jenis_kelamin_list">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>

    <string name="dropdown_frekuensi_menyikat_gigi" translatable="false">Frekuensi menyikat Gigi</string>
    <string-array name="frekuensi_menyikat_gigi">
        <item>1 kali saat mandi</item>
        <item>2 kali saat mandi</item>
        <item>lebih dari 2 kali (saat mandi, setelah sarapan, dan sebelum tidur)</item>
    </string-array>

    <string name="dropdown_kunjungan_ke_dokter_gigi" translatable="false">Kunjungan ke dokter gigi</string>
    <string-array name="kunjungan_ke_dokter_gigi">
        <item>6 bulan sekali</item>
        <item>12 bulan sekali</item>
        <item>saat sakit gigi saja</item>
        <item>Tidak pernah</item>
    </string-array>
</resources>
