<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gemastik.dentistsmile.ui.medical_checkup.physical_checkup.PhysicalCheckupActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_top"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pemeriksaan_fisik"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/pemeriksaan_fisik"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/tinggi_badan"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etTinggiBadan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/masukkan_tinggi_badan"
                android:padding="10dp"
                android:gravity="top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/berat_badan"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etBeratBadan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/masukkan_berat_badan"
                android:padding="10dp"
                android:gravity="top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/imt"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etImt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/harap_isi_tinggi_dan_berat_badan"
                android:padding="10dp"
                android:gravity="top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/sistole"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etSistole"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/kosongkan_bila_tidak_tahu"
                android:padding="10dp"
                android:gravity="top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/diastole"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etDiastole"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/kosongkan_bila_tidak_tahu"
                android:padding="10dp"
                android:gravity="top" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/tvTitlePemeriksaanMata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/pemeriksaan_mata"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="pilih ya atau tidak dari pernyataan sakit mata"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/meta_perih_merah_dan_bengkak"
                android:textSize="15sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/eye1Yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ya"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/eye1No"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tidak"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/meta_perih_merah_dan_bengkak"
                android:textSize="15sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/sfsaf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ya"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/sfsdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tidak"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/meta_perih_merah_dan_bengkak"
                android:textSize="15sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/safsdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ya"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/fasdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tidak"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/meta_perih_merah_dan_bengkak"
                android:textSize="15sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/sfsfsafsaf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ya"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/asdfsd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tidak"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>






        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSimpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_send_white_18dp"
        app:fabSize="normal"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="35dp"
        app:layout_anchorGravity="bottom|right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>