<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gemastik.dentistsmile.ui.medical_checkup.physical_checkup.PhysicalCheckupActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_top"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pemeriksaan_gigi"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp"

        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_childName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="nama anak"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Kecamatan"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerKecamatan"
                android:padding="8dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Kelurahan"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerKelurahan"
                android:padding="8dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Sekolah"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerSekolah"
                android:padding="8dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Kelas"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerKelas"
                android:padding="8dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/pemeriksaan_gigi"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/foto_gigi_depan"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgFront"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:visibility="gone" />
            </LinearLayout>


            <TextView
                android:id="@+id/item_img_1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/round_edit_text"
                android:clickable="true"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="Upload image"
                android:textColor="@color/primary_blue"
                android:textCursorDrawable="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/foto_gigi_kanan"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgRight"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/item_img_2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/round_edit_text"
                android:clickable="true"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="Upload image"
                android:textColor="@color/primary_blue"
                android:textCursorDrawable="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/foto_gigi_kiri"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgLeft"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/item_img_3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/round_edit_text"
                android:clickable="true"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="Upload image"
                android:textColor="@color/primary_blue"
                android:textCursorDrawable="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/foto_gigi_atas"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgTop"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/item_img_4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/round_edit_text"
                android:clickable="true"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="Upload image"
                android:textColor="@color/primary_blue"
                android:textCursorDrawable="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/foto_gigi_bawah"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgBottom"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/item_img_5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/round_edit_text"
                android:clickable="true"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="Upload image"
                android:textColor="@color/primary_blue"
                android:textCursorDrawable="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/frekuensi_menyikat_gigi"
                android:textSize="15sp" />

<!--            <EditText-->
<!--                android:id="@+id/etGsoal1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginHorizontal="30dp"-->
<!--                android:background="@drawable/round_edit_text"-->
<!--                android:padding="10dp"-->
<!--                android:gravity="top" />-->

            <Spinner
                android:id="@+id/spinnerGsoal1"
                android:padding="8dp"
                android:background="@drawable/round_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="30dp"
                android:entries="@array/frekuensi_menyikat_gigi"
                android:prompt="@string/dropdown_frekuensi_menyikat_gigi"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/kunjungan_ke_dokter_gigi"
                android:textSize="15sp" />

<!--            <EditText-->
<!--                android:id="@+id/etGsoal2"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginHorizontal="30dp"-->
<!--                android:background="@drawable/round_edit_text"-->
<!--                android:padding="10dp"-->
<!--                android:gravity="top" />-->

            <Spinner
                android:id="@+id/spinnerGsoal2"
                android:padding="8dp"
                android:background="@drawable/round_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="30dp"
                android:entries="@array/kunjungan_ke_dokter_gigi"
                android:prompt="@string/dropdown_kunjungan_ke_dokter_gigi"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSimpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_send_white_18dp"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>